--- a/app/assets/stylesheets/pophealth.css.scss
+++ b/app/assets/stylesheets/pophealth.css.scss
@@ -856,6 +856,7 @@ table.measureTable {
 		height:60px;
 		padding:5px 10px;
 		vertical-align:bottom;
+    min-width: 60px;
 	}
 	
 	td.percent {
