--- a/app/assets/stylesheets/providers.css.scss
+++ b/app/assets/stylesheets/providers.css.scss
@@ -105,6 +105,7 @@ div #providerMain {
 
 		td.fraction {
 			padding-right:25px;
+      min-width: 60px;
 		}
 
 		td.barChart {
